styles.css
/* ... */
@font-face {
  font-family: "Apercu";
  src: url("fonts/Apercu-Regular.woff2") format("woff2"),
       url("fonts/Apercu-Regular.woff") format("woff");
  font-weight: 400;
  font-style: normal;   
}

@font-face {
  font-family: "Apercu";
  src: url("fonts/Apercu-Medium.woff2") format("woff2"),
       url("fonts/Apercu-Medium.woff") format("woff");
  font-weight: 500;
  font-style: normal;   
}

.heading {
  font-family: "swear-text", serif;
  font-weight: 600;
  font-style: normal;
  src: url(fonts/SwearTextDemo-Medium.otf) format("opentype");
}

.fancy {
  font-family: "swear-text-cilati", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.gradient {
  display: inline-block;
  background: -webkit-linear-gradient(to right, var(--purple), var(--pink), var(--yellow), var(--blue));
  background: -moz-linear-gradient(to right, var(--purple), var(--pink), var(--yellow), var(--blue));
  background: -o-linear-gradient(to right, var(--purple), var(--pink), var(--yellow), var(--blue));
  background: linear-gradient(to right, var(--purple), var(--pink), var(--yellow), var(--blue));
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  width: fit-content;
}

.pink {
  color: var(--pink);
  text-decoration: underline;
  transition: 150ms ease-in-out;
}

.pink:hover {
  color: var(--purple);
}

* {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

body {
  background: var(--bg-default);
  color: var(--text-default);
  font-family: Apercu, Helvetica, sans-serif;
  font-weight: 400;
  font-style: normal;
  overflow-x: hidden;
  max-width: var(--breakpoint-xxl);
  margin: 0 auto; 
  transition: 300ms ease-in-out;
}

.dark-mode {
  --bg-default: #1c1c1c;
  --text-default: var(--text-dark-bg-default);
  --text-default: #E0E0E0;
  --hr-color: #323232;
  --text-strong:  var(--text-dark-bg-default);
  --bg-deep: #323232;
  --text-subtle: #ADADAD;
}  

::selection {
  background: var(--pink);
}

h1 {
  font-size: var(--h1-font-size);
  font-family: "swear-text", serif;
  line-height: var(--h1-line-height);
  color: var(--text-strong);
}

h2 {
  font-size: var(--h2-font-size);
  font-family: "swear-text", serif;
  line-height: var(--h2-line-height);
  color: var(--text-strong);
}

h3 {
  font-size: var(--h3-font-size);
  font-family: "Apercu", Helvetica, sans-serif;
  font-weight: 500;
  line-height: 150%;
  color: var(--text-strong);
}

p {
  font-size: var(--body-font-size);
  font-family: "Apercu", Helvetica, sans-serif;
  font-weight: 400;
  line-height: var(--body-line-height);
  color: var(--text-default);
}

ol li, ul li {
  font-size: var(--body-font-size);
  font-family: "Apercu", sans-serif;
  line-height: var(--body-line-height);
  margin-bottom: var(--padding-xs);
}

ol, ul {
  margin-left: 1.25rem;
}

a {
  font-family: "Apercu", sans-serif;
  text-decoration: none;
  color: inherit;
}

button {
  border: none;
  background-color: var(--pink);
  padding: 0.5rem 1rem;
  border-radius: var(--border-radius-xs);
  color: var(--bg-default);
  font-family: inherit;
  font-size: var(--body-font-size);
  line-height: 150%;
  cursor: pointer;
  transition: 200ms ease-in-out;
}

button:hover {
  background-color: var(--purple);
  transform: rotate(3deg);
}

.navbar {
  position: fixed;
  z-index: 999;
  padding: 0.75rem var(--container-horizontal-padding);
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  margin: 0 auto;
  left: 0;
  right: 0;
}

.nav-logo p {
  font-size: var(--small-font-size);
  line-height: 150%;
}

.nav-logo {
  padding: 0.75rem 1rem;
}

.nav-links {
  display: flex;
  padding: 0.5rem;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  height: 2rem;
}

.nav-logo, .nav-links {
  border-radius: var(--border-radius-md);
  border: 1px solid var(--hr-color);
  background-color: var(--bg-default);
}

.nav-links a {
  display: flex;
  padding: 0.25rem 0.75rem;
  border-radius: var(--border-radius-sm);
  transition: 200ms ease-in-out;
  font-size: var(--small-font-size);
  line-height: 150%;
}

.nav-links a:hover {
  background-color: var(--hr-color);
}

.vertical-line {
  width: 1px;
  height: 2rem;
  background-color: var(--hr-color);
}

.toggle-container {
  height: 2rem;
  padding: 0.125rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.toggle {
  display: flex;
  padding: 0.125rem;
  border-radius: var(--border-radius-sm);
  background-color: var(--hr-color);
  width: 3rem;
}

.toggle-button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: var(--border-radius-xs);
  background-color: var(--bg-default);
  left: 0.125rem;
  transition: 300ms ease-in-out;
  cursor: pointer;
}

.dark-mode .toggle-button {
  transform: translateX(1.5rem);
}

.hero {
  height: 100vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: var(--padding-xl);
}

.hero .container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--padding-xl);
}

#work .horizontal-padding {
  gap: 4rem;
}

.text-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: stretch;
  height: 100%;
}

.description {
  font-size: var(--one-liner-font-size);
  line-height: 150%;
  font-weight: 400;
  font-style: normal;
  margin-bottom: 1rem;
}

.hero-subtext {
  font-size: var(--hero-subtext-font-size);
  line-height: 150%;
}

.bounding-box {
  position: relative;
  display: inline-block;
  width: fit-content;
}

.tooltip {
  position: absolute;
  visibility: hidden;
  background-color: var(--bg-default);
  color: var(--text-strong);
  padding: 0.25rem 0.5rem;
  border: 1px solid var(--text-strong);
  font-size: 0.875rem;
  line-height: 1;
  pointer-events: none;
  white-space: nowrap;
  z-index: 100;
}

.bounding-box:hover .tooltip {
  visibility: visible;
}

strong {
  font-weight: 500;
  font-style: normal;
}
/* ... */

